[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
# Add this line
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.2"
pandas = "^2.1.0"
altair = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
